# assettosync_client

./: .gitignore  Cargo.toml  README.md
src/: install_task.rs  login.glade  main.glade  main.rs  summary.glade  worker.glade
src/config/: mod.rs
src/install_thread/: mod.rs
