[package]
name = "assettosync-client"
version = "0.1.0"
authors = ["Mateusz Szychowski (Muttley) <mateusz@szychowski.it>"]
edition = "2018"

[dependencies]
async-trait = "0.1.48"
compress-tools = "0.11.1"
fs_extra = "1.2.0"
glib = "0.10.3"
reqwest = {version = "0.11.2", features = ["cookies", "json"] }
scopeguard = "1.1.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tempdir = "0.3.7"
tokio = {version = "1.3.0", features = ["full","macros"]}
unrar = "0.4.4"
walkdir = "2"
wildmatch = "1.0.13"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]
